# RizeniOsvetleni

./: Broadcaster.cpp  Broadcaster.h  CMakeLists.txt  Color.cpp  Color.h  Communicator.cpp  Communicator.h  DisplayHandler.cpp  DisplayHandler.h  Drawer.cpp  Drawer.h  Ellipse.cpp  Ellipse.h  HardwareEndpoints.h  IDrawable.cpp  IDrawable.h  Icon.cpp  Icon.h  LightUnit.cpp  LightUnit.h  Line.cpp  Line.h  Listener.cpp  Listener.h  Makefile  Message.cpp  Message.h  NetTools.cpp  NetTools.h  Perifery.cpp  Perifery.h  Point.cpp  Point.h  Polygon.cpp  Polygon.h  README.md  Rectangle.cpp  Rectangle.h  Shape.cpp  Shape.h  (+14 more)
